test/errors/def_parameters_posonly.py
def f0(/):
    pass

def f1(/, x):
    pass

def f2(x, *a, /):
    pass

def f3(a, **kwargs, /):
    pass
